--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 9090
 spring:
+  application:
+    name: business-starter
+  resources:
+    static-locations: file:${aliyun.oss.urlPrefix}
   datasource:
     username: root
     password: 123456
@@ -24,3 +28,11 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
   configuration:
     map-underscore-to-camel-case: true
+
+aliyun:
+  accessKeyId: abc
+  accessKeySecret: abc
+  oss:
+    endpoint: http://oss-cn-hangzhou.aliyuncs.com
+    bucketName: qyl-bucket
+    urlPrefix: https://qyl-bucket.oss-cn-hangzhou.aliyuncs.com/image/
