--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,18 +8,18 @@ spring:
   datasource:
     username: root
     password: 123456
-    url: jdbc:mysql://118.31.16.35:3306/db01?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/db01?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
 
   rabbitmq:
-    host: 118.31.16.35
+    host: localhost
     port: 5672
     username: admin
     password: 123456
     virtual-host: /
   redis:
-    host: 118.31.16.35
+    host: localhost
     port: 6379
     password: 123456
 
